# Copyright (c) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/multimedia/audio_framework/config.gni")

group("audio_unit_test") {
  testonly = true

  deps = [
    "../frameworks/js/napi/audiomanager/test/unittest/audio_manager_test:jsunittest",
    "../frameworks/js/napi/audiomanager/test/unittest/group_manager_test:jsunittest",
    "../frameworks/js/napi/audiomanager/test/unittest/routing_manager_test:jsunittest",
    "../frameworks/js/napi/audiomanager/test/unittest/spatialization_manager_test:jsunittest",
    "../frameworks/js/napi/audiomanager/test/unittest/stream_manager_test:jsunittest",
    "../frameworks/js/napi/audiomanager/test/unittest/volume_manager_test:jsunittest",
    "../frameworks/js/napi/audiorenderer/test/unittest/audio_renderer_interrupt_test:js_audio_interrupt_test",
    "../frameworks/js/napi/audiorenderer/test/unittest/audio_renderer_test:jsunittest",
    "../frameworks/js/napi/audiorenderer/toneplayer/test/unittest/tone_player_test:jsunittest",
    "../frameworks/native/audioadapter/test/unittest:pro_audio_service_adapter_unit_test",
    "../frameworks/native/audiocapturer/test/unittest/capturer_test:audio_capturer_unit_test",
    "../frameworks/native/audiocapturer/test/unittest/capturer_test:audio_fast_capturer_unit_test",
    "../frameworks/native/audiocapturer/test/unittest/capturer_test:inner_capturer_unit_test",
    "../frameworks/native/audiocapturer/test/unittest/multiple_capturer_test:multiple_audio_capturer_unit_test",
    "../frameworks/native/audioeffect/test/unittest/effect_unit_test:audio_effect_chain_manager_unit_test",
    "../frameworks/native/audioeffect/test/unittest/enhance_unit_test:audio_enhance_unittest",
    "../frameworks/native/audioloopback/test/unittest:audio_loopback_unit_test",
    "../frameworks/native/audiopolicy/test/unittest/group_manager_test:audio_group_manager_unit_test",
    "../frameworks/native/audiopolicy/test/unittest/manager_test:audio_manager_unit_test",

    # "../frameworks/native/audiopolicy/test/unittest/policy_test:audio_policy_unit_test",
    "../frameworks/native/audioclock:audioclock_unit_test",
    "../frameworks/native/audiopolicy/test/unittest/routing_manager_test:audio_routing_manager_test",
    "../frameworks/native/audiopolicy/test/unittest/sasdk_test:audio_sasdk_unit_test",
    "../frameworks/native/audiopolicy/test/unittest/spatialization_manager_test:audio_spatialization_manager_test",
    "../frameworks/native/audiopolicy/test/unittest/stream_manager_test:audio_stream_manager_unit_test",
    "../frameworks/native/audiopolicy/test/unittest/volume_change_test:audio_volume_change_unit_test",
    "../frameworks/native/audiorenderer/test/multithreadtest:audio_renderer_multi_test",
    "../frameworks/native/audiorenderer/test/unittest/renderer_test:audio_renderer_proxy_obj_unit_test",
    "../frameworks/native/audiorenderer/test/unittest/renderer_test:capture_renderer_interrupt_unit_test",
    "../frameworks/native/audiorenderer/test/unittest/renderer_test:renderer_capture_interrupt_unit_test",
    "../frameworks/native/audiorenderer/test/unittest/renderer_test:renderer_in_client_unit_test",
    "../frameworks/native/audioschedule:audioschedule_unit_test",
    "../frameworks/native/audiodefinitions:audio_definitions_unit_test",
    "../frameworks/native/audioinnercall:audio_inner_call_unit_test",
    "../frameworks/native/audioqosmanager:audio_qosmanager_unit_test",
    "../frameworks/native/audioutils/test/unittest:audio_speed_unit_test",
    "../frameworks/native/audioutils/test/unittest:audio_utils_plus_unit_test",
    "../frameworks/native/audioutils/test/unittest:audio_utils_pro_unit_test",
    "../frameworks/native/audioutils/test/unittest:audio_utils_unit_test",
    "../frameworks/native/bluetoothclient/test:bluetooth_hfp_manager_unit_test",
    "../frameworks/native/bluetoothclient/test:bluetooth_sco_manager_unit_test",
    "../frameworks/native/examples:pa_stream_test",
    "../frameworks/native/offlineaudioeffect/test/unittest:offline_audio_effect_manager_unit_test",
    "../frameworks/native/ohaudio/test/unittest/oh_audio_capture_test:audio_oh_capture_unit_test",
    "../frameworks/native/ohaudio/test/unittest/oh_audio_common_test:audio_oh_common_unit_test",
    "../frameworks/native/ohaudio/test/unittest/oh_audio_device_change_test:audio_oh_device_change_unit_test",
    "../frameworks/native/ohaudio/test/unittest/oh_audio_manager_test:audio_oh_manager_unit_test",
    "../frameworks/native/ohaudio/test/unittest/oh_audio_microphone_block_test:audio_oh_microphone_block_test",
    "../frameworks/native/ohaudio/test/unittest/oh_audio_render_test:audio_oh_render_unit_test",
    "../frameworks/native/ohaudio/test/unittest/oh_audio_routing_manager_test:audio_oh_routing_manager_unit_test",
    "../frameworks/native/ohaudio/test/unittest/oh_audio_stream_builder_test:audio_oh_builder_unit_test",
    "../frameworks/native/ohaudio/test/unittest/oh_audio_stream_manager_test:audio_oh_stream_manager_unit_test",
    "../frameworks/native/ohaudio/test/unittest/oh_audio_volume_manager_test:audio_oh_volume_manager_unit_test",
    "../frameworks/native/ohaudio/test/unittest/oh_audio_session_manager_test:audio_oh_session_manager_unit_test",
    "../frameworks/native/ohaudio/test/unittest/oh_audio_workgroup_test:audio_oh_audio_workgroup_unit_test",
    "../frameworks/native/toneplayer/test/unittest:audio_toneplayer_unit_test",
    "../services/audio_engine/test/unittest:audio_engine_unit_test",
    "../services/audio_engine/test/unittest:hpae_capture_effect_node_test",
    "../services/audio_engine/test/unittest:hpae_capturer_manager_test",
    "../services/audio_engine/test/unittest:hpae_co_buffer_node_test",
    "../services/audio_engine/test/unittest:hpae_gain_node_test",
    "../services/audio_engine/test/unittest:hpae_inner_capturer_unit_test",
    "../services/audio_engine/test/unittest:hpae_loudness_gain_node_test",
    "../services/audio_engine/test/unittest:hpae_manager_test",
    "../services/audio_engine/test/unittest:hpae_mixer_node_test",
    "../services/audio_engine/test/unittest:hpae_node_common_test",
    "../services/audio_engine/test/unittest:hpae_output_cluster_test",
    "../services/audio_engine/test/unittest:hpae_pcm_buffer_test",
    "../services/audio_engine/test/unittest:hpae_pcm_process_test",
    "../services/audio_engine/test/unittest:hpae_plugins_unit_test",
    "../services/audio_engine/test/unittest:hpae_policy_manager_test",
    "../services/audio_engine/test/unittest:hpae_process_cluster_test",
    "../services/audio_engine/test/unittest:hpae_remote_output_cluster_test",
    "../services/audio_engine/test/unittest:hpae_remote_sink_output_node_test",
    "../services/audio_engine/test/unittest:hpae_render_effect_node_test",
    "../services/audio_engine/test/unittest:hpae_render_manager_test",
    "../services/audio_engine/test/unittest:hpae_resample_node_test",
    "../services/audio_engine/test/unittest:hpae_signal_process_thread_test",
    "../services/audio_engine/test/unittest:hpae_sink_input_node_test",
    "../services/audio_engine/test/unittest:hpae_sink_output_node_test",
    "../services/audio_engine/test/unittest:hpae_soft_link_unit_test",
    "../services/audio_engine/test/unittest:hpae_source_input_cluster_test",
    "../services/audio_engine/test/unittest:hpae_source_input_node_test",
    "../services/audio_engine/test/unittest:hpae_source_output_node_test",
    "../services/audio_engine/test/unittest:hpae_source_process_cluster_test",
    "../services/audio_policy/test:audio_policy_unittest_packages",
    "../services/audio_service/test/unittest:audio_balance_unit_test",
    "../services/audio_service/test/unittest:audio_dump_pcm_unit_test",
    "../services/audio_service/test/unittest:audio_engine_manager_unit_test",
    "../services/audio_service/test/unittest:audio_spatial_channel_converter_unit_test",
    "../services/audio_service/test/unittest:audio_thread_task_unit_test",
    "../services/audio_service/test/unittest:capturer_in_client_unit_test",
    "../services/audio_service/test/unittest:capturer_in_server_unit_test",
    "../services/audio_service/test/unittest:format_converter_unit_test",
    "../services/audio_service/test/unittest:futex_tool_unit_test",
    "../services/audio_service/test/unittest:hpae_capturer_stream_impl_unit_test",
    "../services/audio_service/test/unittest:hpae_renderer_stream_impl_unit_test",
    "../services/audio_service/test/unittest:ipc_stream_in_server_unit_test",
    "../services/audio_service/test/unittest:offline_stream_in_server_unit_test",
    "../services/audio_service/test/unittest/hpae_adapter_manager_unit_test:hpae_adapter_manager_unit_test",

    "../services/audio_service/test/unittest:policy_handler_unit_test",
    "../services/audio_service/test/unittest:resource_manager_adapter_unit_test",
    "../services/audio_service/test/unittest:volume_tools_unit_test",
    "../services/audio_service/test/unittest/audio_param_parser_unit_test:audio_param_parser_unit_test",
    "../services/audio_service/test/unittest/audio_server_dump_unit_test:audio_server_hpae_dump_unit_test",
    "../services/audio_service/test/unittest/audio_server_unit_test:audio_server_unit_test",
    "../services/audio_service/test/unittest/pro_audio_stream_manager_unit_test:pro_audio_stream_manager_unit_test",
    "../services/audio_service/test/unittest/pro_renderer_stream_impl_unit_test:pro_renderer_stream_impl_unit_test",
    "../services/audio_service/test/unittest:ring_buffer_wrapper_unit_test",
    "../services/audio_service/test/unittest:audio_resource_service_unit_test",
    "../services/audio_service/test/unittest:audio_stream_monitor_unit_test",
  ]

  if (audio_framework_feature_opensl_es) {
    deps += [
      "../frameworks/native/opensles/test/unittest/audiocapturer_adapter_unit_test:audio_capturer_adapter_unit_test",
      "../frameworks/native/opensles/test/unittest/opensles_player_test:audio_opensles_player_unit_test",
      "../frameworks/native/opensles/test/unittest/opensles_recorder_test:audio_opensles_recorder_unit_test",
    ]
  }

  if (speex_enable == true) {
    deps += [
      "../frameworks/native/hdiadapter_new:hdiadapter_unit_test",
      "../services/audio_service/test/unittest:direct_playback_engine_unit_test",
      "../services/audio_service/test/unittest:none_mix_engine_unit_test",
    ]

    if (audio_framework_feature_low_latency) {
      deps += [
        "../services/audio_service/test/unittest:audio_process_in_client_unit_test",
        "../services/audio_service/test/unittest/audio_endpoint_unit_test:audio_endpoint_plus_unit_test",
        "../services/audio_service/test/unittest/audio_endpoint_unit_test:audio_endpoint_unit_test",
        "../services/audio_service/test/unittest:audio_process_in_client_second_unit_test",
      ]
    }
  }

  if (audio_framework_feature_low_latency) {
    deps += [
      "../frameworks/native/audiorenderer/test/unittest/renderer_test:audio_fast_renderer_unit_test",
      #"../frameworks/native/audiorenderer/test/unittest/renderer_test:audio_renderer_unit_test",
      "../services/audio_service/test/unittest:audio_process_in_server_unit_test",
      "../services/audio_service/test/unittest:audio_service_unit_test",
      "../services/audio_service/test/unittest/renderer_in_server_unit_test:renderer_in_server_second_unit_test",
      "../services/audio_service/test/unittest/renderer_in_server_unit_test:renderer_in_server_unit_test",
      "../services/audio_service/test/unittest/renderer_in_server_unit_test:renderer_in_server_third_unit_test",
    ]
  }

  if (audio_framework_feature_inner_capturer) {
    deps += [ "../frameworks/native/playbackcapturer/test/unittest:playback_capturer_manager_unit_test" ]
  }
    if (!audio_framework_feature_new_engine_flag) {
    deps += [
      "../frameworks/native/audioadapter/test/unittest:pulse_audio_service_adapter_impl_unit_test",
      "../services/audio_service/test/unittest:pa_capturer_stream_impl_unit_test",
      "../services/audio_service/test/unittest:pa_renderer_stream_impl_unit_test",
      "../services/audio_service/test/unittest:pa_renderer_stream_impl_unit_test_p2",
      "../services/audio_service/test/unittest/pa_adapter_manager_unit_test:pa_adapter_manager_unit_test",
      "../services/audio_service/test/unittest/audio_server_dump_unit_test:audio_server_dump_unit_test",
    ]
  }
}

group("audio_module_test") {
  testonly = true

  deps = [ "moduletest/audiopolicy:audio_policy_module_test" ]
}

group("audio_fuzz_test") {
  testonly = true

  deps = [
    "fuzztest/audioa2dpdevice_fuzzer:fuzztest",
    "fuzztest/audioa2dpoffloadmanager_fuzzer:fuzztest",
    "fuzztest/audioactivedevice_fuzzer:fuzztest",
    "fuzztest/audioadaptermanager_fuzzer:fuzztest",
    "fuzztest/audioadaptorbluetooth_fuzzer:fuzztest",
    "fuzztest/audioaffinitymanager_fuzzer:fuzztest",
    "fuzztest/audiobufferbase_fuzzer:fuzztest",
    "fuzztest/audiocollaborativeservice_fuzzer:fuzztest",
    "fuzztest/audioconnecteddevice_fuzzer:fuzztest",
    "fuzztest/audiocoreservice_fuzzer:fuzztest",
    "fuzztest/audiocoreserviceentry_fuzzer:fuzztest",
    "fuzztest/audiocoreserviceprivate_fuzzer:fuzztest",
    "fuzztest/audiodevicecommon_fuzzer:fuzztest",
    "fuzztest/audiodevicelock_fuzzer:fuzztest",
    "fuzztest/audiodevicestatus_fuzzer:fuzztest",
    "fuzztest/audiodumppcm_fuzzer:fuzztest",
    "fuzztest/audioecmanager_fuzzer:fuzztest",
    "fuzztest/audioeffect_fuzzer:fuzztest",
    "fuzztest/audioeffectchain_fuzzer:fuzztest",
    "fuzztest/audioeffectenhance_fuzzer:fuzztest",
    "fuzztest/audioeffectservice_fuzzer:fuzztest",
    "fuzztest/audioeffectvolume_fuzzer:fuzztest",
    "fuzztest/audiofilter_fuzzer:fuzztest",
    "fuzztest/audiointerruptdfxcollector_fuzzer:fuzztest",
    "fuzztest/audiointerruptgroupinfo_fuzzer:fuzztest",
    "fuzztest/audiointerruptservice_fuzzer:fuzztest",
    "fuzztest/audiointerruptservicemore_fuzzer:fuzztest",
    "fuzztest/audiointerruptzone_fuzzer:fuzztest",
    "fuzztest/audiolimitermanager_fuzzer:fuzztest",
    "fuzztest/audiomanager_fuzzer:fuzztest",
    "fuzztest/audiomanagerlistenerstubimpl_fuzzer:fuzztest",
    "fuzztest/audiomanagerstub_fuzzer:fuzztest",
    "fuzztest/audioperformancemonitor_fuzzer:fuzztest",
    "fuzztest/audiomicrophonedescriptor_fuzzer:fuzztest",
    "fuzztest/audiopipeinfo_fuzzer:fuzztest",
    "fuzztest/audiopipemanager_fuzzer:fuzztest",
    "fuzztest/audiopipeselector_fuzzer:fuzztest",
    "fuzztest/audiopnpserver_fuzzer:fuzztest",

    # "fuzztest/audiopolicyanother_fuzzer:fuzztest",
    # "fuzztest/audiopolicyclient_fuzzer:fuzztest",
    "fuzztest/audiopolicymanager_fuzzer:fuzztest",

    # "fuzztest/audiopolicymore_fuzzer:fuzztest",

    # "fuzztest/audiopolicyservenhance_fuzzer:fuzztest",
    "fuzztest/audiopolicyserver_fuzzer:fuzztest",
    "fuzztest/audiopolicyservice_fuzzer:fuzztest",
    # "fuzztest/audiopolicyserviceenhance_fuzzer:fuzztest",
    # "fuzztest/audiopolicyservicemore_fuzzer:fuzztest",
    # "fuzztest/audiopolicyservicespatialization_fuzzer:fuzztest",
    "fuzztest/audiopolicystatemonitor_fuzzer:fuzztest",
    "fuzztest/audiopolicystub_fuzzer:fuzztest",
    "fuzztest/audiopowerstatelistener_fuzzer:fuzztest",
    "fuzztest/audioqosmanager_fuzzer:fuzztest",
    "fuzztest/audiorecoverydevice_fuzzer:fuzztest",
    "fuzztest/audioschedule_fuzzer:fuzztest",
    "fuzztest/audioserver_fuzzer:fuzztest",
    "fuzztest/audioserverbalance_fuzzer:fuzztest",
    "fuzztest/audioservermore_fuzzer:fuzztest",
    "fuzztest/audioserverproxy_fuzzer:fuzztest",
    "fuzztest/audioservice_fuzzer:fuzztest",
    # "fuzztest/audioserviceclient_fuzzer:fuzztest",
    "fuzztest/audioservicecommon_fuzzer:fuzztest",
    "fuzztest/audioservicecommonenhance_fuzzer:fuzztest",
    "fuzztest/audioserviceserversrc_fuzzer:fuzztest",
    "fuzztest/audioserviceserversrcenhance_fuzzer:fuzztest",
    "fuzztest/audioservicestub_fuzzer:fuzztest",
    "fuzztest/audiosessionservice_fuzzer:fuzztest",
    "fuzztest/audiosocketthread_fuzzer:fuzztest",
    "fuzztest/audiospatializationservice_fuzzer:fuzztest",
    "fuzztest/audiostatemanager_fuzzer:fuzztest",
    "fuzztest/audiostream_fuzzer:fuzztest",
    "fuzztest/audiostreamcollector_fuzzer:fuzztest",
    "fuzztest/audiostreamdescriptor_fuzzer:fuzztest",
    "fuzztest/audiousbmanager_fuzzer:fuzztest",
    "fuzztest/audioutils_fuzzer:fuzztest",
    "fuzztest/audiovolume_fuzzer:fuzztest",
    "fuzztest/audiovolumemanager_fuzzer:fuzztest",
    "fuzztest/audioxmlparser_fuzzer:fuzztest",
    "fuzztest/audiozone_fuzzer:fuzztest",
    "fuzztest/audiozoneservice_fuzzer:fuzztest",
    "fuzztest/audiozoneclientmanager_fuzzer:fuzztest",
    "fuzztest/captureclockmanager_fuzzer:fuzztest",
    "fuzztest/capturermanager_fuzzer:fuzztest",
    "fuzztest/channelconverter_fuzzer:fuzztest",
    "fuzztest/coreserviceproviderstub_fuzzer:fuzztest",
    "fuzztest/devicestatuslistener_fuzzer:fuzztest",
    "fuzztest/dfxmsgmanager_fuzzer:fuzztest",
    "fuzztest/dfxutils_fuzzer:fuzztest",
    "fuzztest/formatconverter_fuzzer:fuzztest",
    "fuzztest/futextool_fuzzer:fuzztest",
    "fuzztest/hapeaudioformatconverternode_fuzzer:fuzztest",
    "fuzztest/hpaedownmixer_fuzzer:fuzztest",
    "fuzztest/hpaecaptureeffectnode_fuzzer:fuzztest",
    "fuzztest/hpaecapturermanager_fuzzer:fuzztest",
    "fuzztest/hpaecapturerstreamimpl_fuzzer:fuzztest",
    "fuzztest/hpaedfxtree_fuzzer:fuzztest",
    "fuzztest/hpaeengine_fuzzer:fuzztest",
    "fuzztest/hpaegainnode_fuzzer:fuzztest",
    "fuzztest/hpaeinnercapturermanager_fuzzer:fuzztest",
    "fuzztest/hpaemanager_fuzzer:fuzztest",
    "fuzztest/hpaemanagerimpl_fuzzer:fuzztest",
    "fuzztest/hpaemanagerstream_fuzzer:fuzztest",
    "fuzztest/hpaemixernode_fuzzer:fuzztest",
    "fuzztest/hpaemanagercontrol_fuzzer:fuzztest",
    "fuzztest/hpaenolockqueue_fuzzer:fuzztest",
    "fuzztest/hpaeoffloadrenderermanager_fuzzer:fuzztest",
    "fuzztest/hpaeoutputcluster_fuzzer:fuzztest",
    "fuzztest/hpaepcmbuffer_fuzzer:fuzztest",
    "fuzztest/hpaepcmprocess_fuzzer:fuzztest",
    "fuzztest/hpaepolicymanager_fuzzer:fuzztest",
    "fuzztest/hpaeprocesscluster_fuzzer:fuzztest",
    "fuzztest/hpaeproresamplerprocess_fuzzer:fuzztest",
    "fuzztest/hpaeremoteoutputcluster_fuzzer:fuzztest",
    "fuzztest/hpaerenderermanager_fuzzer:fuzztest",
    "fuzztest/hpaerenderermanageradd_fuzzer:fuzztest",
    "fuzztest/hpaeresamplenode_fuzzer:fuzztest",
    "fuzztest/hpaesinkinputnode_fuzzer:fuzztest",
    "fuzztest/hpaesinkoutputnode_fuzzer:fuzztest",
    "fuzztest/hpaesoftlink_fuzzer:fuzztest",
    "fuzztest/hpaesourceinputcluster_fuzzer:fuzztest",
    "fuzztest/hpaesourceinputnode_fuzzer:fuzztest",
    "fuzztest/hpaesourceoutputnode_fuzzer:fuzztest",
    "fuzztest/hpaesourceprocesscluster_fuzzer:fuzztest",
    "fuzztest/ipcstreaminserver_fuzzer:fuzztest",
    "fuzztest/istandardaudiozoneclient_fuzzer:fuzztest",
    "fuzztest/istandardspatializationstatechangelistener_fuzzer:fuzztest",
    "fuzztest/microphonedescriptor_fuzzer:fuzztest",
    "fuzztest/powerstatelistener_fuzzer:fuzztest",
    "fuzztest/resourcemanageradapter_fuzzer:fuzztest",
    "fuzztest/sleaudiodevicemanager_fuzzer:fuzztest",
    "fuzztest/volumedatamaintainer_fuzzer:fuzztest",
    "fuzztest/rendererinserver_fuzzer:fuzztest",
  ]
}

group("audio_benchmark_test") {
  testonly = true

  deps = [
    "../frameworks/native/audiocapturer/test/benchmark:benchmarktest",
    "../frameworks/native/audiopolicy/test/benchmark:benchmarktest",
    "../frameworks/native/audiorenderer/test/benchmark:benchmarktest",
  ]
}
