# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("../../config.gni")
import("../../multimedia_aafwk.gni")

config("public_ffi_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("cj_multimedia_audio_ffi") {
  public_configs = [ ":public_ffi_config" ]

  sanitize = {
    cfi = true  # Enable/disable control flow integrity detection
    boundary_sanitize = true  # Enable boundary san detection
    cfi_cross_dso = true  # Cross-SO CFI Checks
    integer_overflow = true  # Enable integer overflow detection
    ubsan = true  # Enable some Ubsan options
    debug = false
  }

  include_dirs = [
    "include",
    "../../frameworks/native/include",
    "../../interfaces/inner_api",
  ]

  sources = [
    "src/multimedia_audio_capturer_callback.cpp",
    "src/multimedia_audio_capturer_impl.cpp",
    "src/multimedia_audio_common.cpp",
    "src/multimedia_audio_ffi.cpp",
    "src/multimedia_audio_manager_impl.cpp",
    "src/multimedia_audio_renderer_callback.cpp",
    "src/multimedia_audio_renderer_impl.cpp",
    "src/multimedia_audio_routing_manager_callback.cpp",
    "src/multimedia_audio_routing_manager_impl.cpp",
    "src/multimedia_audio_session_manager_callback.cpp",
    "src/multimedia_audio_session_manager_impl.cpp",
    "src/multimedia_audio_stream_manager_callback.cpp",
    "src/multimedia_audio_stream_manager_impl.cpp",
    "src/multimedia_audio_volume_group_manager_callback.cpp",
    "src/multimedia_audio_volume_group_manager_impl.cpp",
    "src/multimedia_audio_volume_manager_callback.cpp",
    "src/multimedia_audio_volume_manager_impl.cpp",
  ]

  deps = [
    "../../services/audio_policy:audio_policy_client",
    "../../services/audio_service:audio_client",
    "../native/audiocapturer:audio_capturer",
    "../native/audiorenderer:audio_renderer",
    "../native/audioutils:audio_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "napi:ace_napi",
    "napi:cj_bind_ffi",
    "napi:cj_bind_native",
    "ipc:ipc_core",
  ]

  innerapi_tags = [ "platformsdk" ]
  part_name = "audio_framework"
  subsystem_name = "multimedia"
}
